<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *                                     /@
  ~  *                      __        __   /\/
  ~  *                     /==\      /  \_/\/
  ~  *                   /======\    \/\__ \__
  ~  *                 /==/\  /\==\    /\_|__ \
  ~  *              /==/    ||    \=\ / / / /_/
  ~  *            /=/    /\ || /\   \=\/ /
  ~  *         /===/   /   \||/   \   \===\
  ~  *       /===/   /_________________ \===\
  ~  *    /====/   / |                /  \====\
  ~  *  /====/   /   |  _________    /      \===\
  ~  *  /==/   /     | /   /  \ / / /         /===/
  ~  * |===| /       |/   /____/ / /         /===/
  ~  *  \==\             /\   / / /          /===/
  ~  *  \===\__    \    /  \ / / /   /      /===/   ____                    __  _         __  __                __
  ~  *    \==\ \    \\ /____/   /_\ //     /===/   / __ \__  ______  ____ _/ /_(_)____   / / / /__  ____ ______/ /_
  ~  *    \===\ \   \\\\\\\/   ///////     /===/  / / / / / / / __ \/ __ `/ __/ / ___/  / /_/ / _ \/ __ `/ ___/ __/
  ~  *      \==\/     \\\\/ / //////       /==/  / /_/ / /_/ / / / / /_/ / /_/ / /__   / __  /  __/ /_/ / /  / /_
  ~  *      \==\     _ \\/ / /////        |==/   \___\_\__,_/_/ /_/\__,_/\__/_/\___/  /_/ /_/\___/\__,_/_/   \__/
  ~  *        \==\  / \ / / ///          /===/
  ~  *        \==\ /   / / /________/    /==/
  ~  *          \==\  /               | /==/
  ~  *          \=\  /________________|/=/
  ~  *            \==\     _____     /==/
  ~  *           / \===\   \   /   /===/
  ~  *          / / /\===\  \_/  /===/
  ~  *         / / /   \====\ /====/
  ~  *        / / /      \===|===/
  ~  *        |/_/         \===/
  ~  *                       =
  ~  *
  ~  * Copyright(c) Developed by John Alves at 2018/$today.mouth/13 at 1:14:36 for quantic heart studios
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/desc_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hint_user"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hint_country"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hint_position"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/hint_points"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/label_title_winners"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/hint_rank_winner"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/label_title_disputed"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/hint_rank_disputed"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>